# news-app

./: .gitignore  README.md  package.json  tsconfig.json
django-backend/: pyproject.toml
django-backend/new_app/: settings.py  urls.py
django-backend/news/: serializers.py  urls.py  views.py
public/: index.html
public/locales/ar/: translation.json
public/locales/en/: translation.json
src/: App.tsx  SupportedLocales.ts  Wrapper.tsx  i18n.ts  index.tsx
src/components/: Articles.tsx  Card.tsx  Header.tsx  SearchResult.tsx
src/interfaces/: NewsInterfaces.ts
src/utils/: useDebounce.ts
